--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "date-fns": "^2.28.0",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "lottie-react-native": "^5.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7"
